# ZDPlasKin-Wrapper

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  main.cpp  pyproject.toml  setup.py
examples/: example1.cpp  example1.h
fortran/: CMakeLists.txt  testing.F90
include/: LibraryLoader.h  PlaskinParams.h  ZDPlasKinCompiler.h  ZDPlasKinExceptions.h  ZDPlasKinFunctionDefs.h  ZDPlasKinParams.h  ZDPlasKinWrapper.h  bindings.h  platform.h
include/helpers/: filepaths.h  string_helpers.h  vector_helpers.h
include/unix/: UnixLoader.h
include/windows/: WindowsLoader.h
libs/win/: dvode_f90_m.F90
python/: CMakeLists.txt  __init__.py  bindings.cpp  main.cpp  pybind11.cmake  test.py  zdplaskin_bindings.cpp
src/: PlaskinParams.cpp  UnixLoader.cpp  WindowsLoader.cpp  ZDPlasKinCompiler.cpp  ZDPlasKinParams.cpp  ZDPlasKinWrapper.cpp
src/helpers/: string_helpers.cpp
